force-app/main/default/objects/Passenger_2__c/Passenger_2__c.object-meta.xml
<CustomObject>
    <label>Passenger 2</label>
    <nameField>
        <displayFormat>PID-{000}</displayFormat>
        <label>Passenger ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passengers 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>