force-app/main/default/objects/Passenger_2__c/fields/Frequent_Flyer_Number__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Number__c</fullName>
    <label>Frequent Flyer Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>