force-app/main/default/objects/Passenger_2__c/fields/Times_Flied__c.field-meta.xml
<CustomField>
    <fullName>Times_Flied__c</fullName>
    <label>Times Flied</label>
    <summaryForeignKey>Ticket_2__c.Passenger_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>